docs: fix dropdowns background in dark mode (#4094)

--- a/projects/ngrx.io/src/styles/2-modules/select-menu/_select-menu-theme.scss
+++ b/projects/ngrx.io/src/styles/2-modules/select-menu/_select-menu-theme.scss
@@ -22,13 +22,12 @@
   }
 
   .form-select-dropdown {
-    background: constants.$white;
+    background: mat.get-color-from-palette($background, background);
     box-shadow: 0 16px 16px rgba(constants.$black, 0.24), 0 0 16px rgba(constants.$black, 0.12);
 
     li {
       &:hover {
-        background-color: if($is-dark-theme, constants.$darkgray, constants.$purple-grey-50);
-        color: if($is-dark-theme, constants.$purple-grey-400, constants.$purple-grey-500);
+        background-color: if($is-dark-theme, #444, constants.$purple-grey-50);
       }
 
       &.selected {
